<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="right"
        >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cancel"
            android:scaleType="center"
            android:background="@color/bg_login"
            android:id="@+id/backBt"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >
        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_welcome"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/white"

            />
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_sing_in_to_your_account"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            />
        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textColorHint="@color/white"
            android:gravity="center"
            android:id="@+id/emailEt"
            android:textColor="@color/white"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:textColorHint="@color/white"
            android:gravity="center"
            android:id="@+id/passwordEt"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >
        <Button
            android:id="@+id/loginBt"
            android:text="@string/btn_sing_in"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            />
        <TextView
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forgotPassword"
            android:text="@string/tx_forgot_pass"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:onClick="forgotPassword"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_sing_in_social_account"
            android:id="@+id/singInSocail"
            android:gravity="center_horizontal"
            android:layout_gravity="bottom"
            android:textSize="25sp"
            android:textColor="@color/white"

            />
    </LinearLayout>

</LinearLayout>
